Corrige documentação do swagger para método que recupera comimts de um repository
